<resources>
    <string name="app_name">Instagram</string>
    <string name="insta">Instagram</string>
    <string name="pwd">Password</string>
    <string name="username">Username</string>
    <string name="signup">Sign up!</string>
    <string name="image">Image</string>
    <string name="default_error">Error Message</string>
    <string name="login">Log In!</string>
    <string name="logOut">Log Out</string>
    <string name="share">Share</string>
    <string name="no_feed">No feed for Now :(</string>

</resources>
